--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,42 +1,224 @@
-.App {
-  text-align: center;
+html {
+  height: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+body{
+  background-color: rgb(42, 40, 40);
+  font-size: 20px;
   min-height: 100vh;
+}
+
+.root{
+  min-height: 100vh;
+}
+
+input, select, textarea{
+  background-color: rgb(80, 76, 76);
+  color: rgb(204, 204, 204);
+}
+
+.container{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(204, 204, 204);
+  margin-top: 20px;
+  margin-left: 15px;
+  margin-right: 1px;
+  min-height: 100vh;
 }
 
-.App-link {
-  color: #61dafb;
+li{
+  list-style-type: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+a{
+  text-decoration: none;
+  color: black;
+}
+
+button{
+  border: solid;
+  border-color: #525965;
+  border-radius: 10px;
+  background-color: rgb(162, 162, 162);
+  margin-right: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 4px;
+  padding-bottom: 5px;
+}
+
+/* header block*/
+header{
+  flex: 1 0 auto;
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 30px;
   }
-  to {
-    transform: rotate(360deg);
-  }
+
+.menu{
+  display: flex;
+}
+
+div>li{
+  max-width: 30%;
+}
+
+div>li>a{
+border: solid;
+border-color: #525965;
+border-radius: 10px;
+background: linear-gradient(rgb(181, 172, 172),rgb(62, 62, 62));
+text-shadow: 1px 1px 3px rgba(31, 31, 31, 0.837);
+margin-right: 10px;
+padding-left: 10px;
+padding-right: 10px;
+padding-top: 2px;
+padding-bottom: 5px;
+-moz-user-select: none;
+-khtml-user-select: none;
+user-select: none;
+white-space: nowrap;
+}
+
+
+div>li>a:hover{
+  background: linear-gradient(rgb(151, 142, 142),rgb(33, 33, 33));
+}
+
+.logout, .btn-submit{
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  user-select: none;    
+  border: solid;
+  border-color: #525965;
+  border-radius: 10px;
+  background: linear-gradient(rgb(181, 172, 172),rgb(62, 62, 62));
+  color: #000;
+  text-shadow: 1px 1px 3px rgba(31, 31, 31, 0.837);
+  font-size: calc(20px);
+}
+
+.logout:hover, .btn-submit:hover{
+  background: linear-gradient(rgb(151, 142, 142),rgb(33, 33, 33));
+}
+/* end header*/
+
+/* content */
+.content {
+  height: 100%;
+  flex: 1 0 auto;
 }
 
 .complete {
-  background-color: rgb(111, 185, 111);
+  background-color: rgb(46, 80, 139);
 }
+table{
+  width: 100%;
+}
+
+th{
+  border-bottom-style: solid;
+  border-color: seashell;
+  border-width: 1px
+}
+
+td{
+  border-bottom-style: solid;
+  border-color: seashell;
+  border-width: 1px;
+  padding: 0;
+}
+
+td>a{
+  color: rgb(122, 128, 197);
+}
+
+td>button{
+  border-bottom-style: none;
+  border-radius: 5px;
+  font-size: 20px;
+}
+
+td>a:hover{
+  color: rgb(76, 79, 117);
+}
+
+.td-btn{
+  border-bottom: none;
+}
+
+td>button{
+  background: linear-gradient(rgb(181, 172, 172),rgb(62, 62, 62));
+  text-shadow: 1px 1px 3px rgba(31, 31, 31, 0.837);
+  padding: 2px 10px;
+  margin-bottom: 5px;
+}
+
+td>button:hover{
+  background: linear-gradient(rgb(151, 142, 142),rgb(33, 33, 33));
+}
+
+.filtering{
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+
+/*create todo/project*/
+.create-form{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 20%;
+}
+
+.btn-submit{
+  background: linear-gradient(rgb(181, 172, 172),rgb(62, 62, 62) 80%);
+  height: 35px;
+}
+
+.creation-input, .creation-select, .creation-textarea{
+  font-size: large;
+  margin-bottom: 20px;
+}
+
+.todo-text{
+  vertical-align: top;
+  height: 100px;
+}
+/*end create todo/project**/
+/*end content*/
+
+/* footer */
+footer {
+  margin-top: 50px;
+  padding: 0 50px;
+  border-top-style: solid;
+  text-align: right;
+  flex: 0 0 auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+.about-us{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.footer-link{
+  color: rgb(52, 55, 207);
+}
+
+.footer-link:hover{
+  color: rgb(57, 51, 125);
+}
+
+.footer-name{
+  white-space: nowrap;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+}
+/* end footer */
